--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Membership Form Design",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "node-sass assets/sass/style.scss assets/css/style.css -w"
+    "compile:sass": "sass assets/sass:assets/css -w"
   },
   "repository": {
     "type": "git",
